--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>HELLO!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</title>
 </head>
 <body>
-    <h1>wrywrywrywrywrywrywrywrywrywrywrywrywrywrywrywrywrywrywrywrywrywrywry</h1>
+    <h1>wry</h1>
 </body>
 </html>
