--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HELLO!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</title>
+    <title>惠惠和八九寺天下第一</title>
 </head>
 <body>
     <h1>wry</h1>
