--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>惠惠和八九寺天下第一</title>
+    <title>马猴烧酒八九寺</title>
 </head>
 <body>
-    <h1>wry</h1>
+<center>
+<h2><a href="1_HelloWorld.html">1.HelloWorld</a></h2>
+<h2><a href="2_文本标签.html">2.文本标签</a></h2>
+<h2><a href="3_案例_公司简介.html">3.公司简介</a></h2>
+<h2><a href="4_图片标签.html">4.图片标签</a></h2>
+<h2><a href="5_列表标签.html">5.列表标签</a></h2>
+<h2><a href="6_链接标签.html">6.链接标签</a></h2>
+<h2><a href="7_块标签.html">7.块标签</a></h2>
+</center>
 </body>
 </html>
