--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>马猴烧酒八九寺</title>
+    <title>JavaWeb_Notes</title>
     <style>
         div {
             background-color: aliceblue;
