--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>JavaWeb_Notes</title>
+    <title>马猴烧酒八九寺</title>
     <style>
         div {
             background-color: aliceblue;
             background-image: url("image/5.jpg");
             background-repeat: no-repeat;
-            background-size: 1500px auto;
+            background-size: 100% 100%;
             /*默认是平铺*/
             width: 1500px;
             height: 1000px;
@@ -26,6 +26,8 @@
         <h2><a href="5_列表标签.html" target="_blank">5.列表标签</a></h2>
         <h2><a href="6_链接标签.html" target="_blank">6.链接标签</a></h2>
         <h2><a href="7_块标签.html" target="_blank">7.块标签</a></h2>
+        <h2><a href="8_表格标签.html" target="_blank">8.表格标签</a></h2>
+        <h2><a href="9_综合案例.html" target="_blank">9.综合案例</a></h2>
     </center>
 </div>
 </body>
